Forge port: convert remaining source to 1.20.1 APIs
Rework block entities, blocks, entities, items, mixins, screens and
datagen onto Forge 47.4.10 with official mappings. Migrate the Fabric
datagen output (loot tables, block tags, blockstates, models) into
src/main/resources and collapse the 1.21-style item model definitions
to classic item models. Add optional vanillabackport and ntrials
dependencies. Two mixins with interface targets still fail to compile
(SignalGetterMixin, ClientTooltipComponentMixin).